채팅기능 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,8 @@ spring:
 logging:
   level:
     org.hibernate.orm.jdbc.bind: trace
+  #  org.springframework.security: DEBUG
+  #  org.springframework.web: DEBUG
 
 jwt:
   access:
